kubernetes/overlays/homelab-lenovo/home-assistant/generated/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: home-assistant
  namespace: home-assistant

spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: websecure
  hostnames:
    - home-assistant.homelab-lenovo.knlim.dev
  rules:
    - backendRefs:
        - name: home-assistant
          port: 8123
